word-wrap fix

--- a/frontend/src/components/Main/Card/Card.css
+++ b/frontend/src/components/Main/Card/Card.css
@@ -10,6 +10,7 @@
     overflow: hidden;
     transition: all 0.2s;
     box-shadow: 0 3px 3px rgba(0, 0, 0, 0.16);
+    word-wrap: break-word;
 }
 
 .card + .card{
